<?xml version='1.0' encoding='utf-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.projectwizard</groupId>
    <artifactId>ProjectWizard</artifactId>
    <version>1.0.0</version>

    <properties>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <javafx.version>17.0.15</javafx.version>

    </properties>

    <dependencies>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
 <groupId>io.github.mkpaz</groupId>
    <artifactId>atlantafx-base</artifactId>
    <version>2.0.1</version>
    <exclusions>
        <exclusion>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx</artifactId> 
        </exclusion>
        <exclusion>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
        </exclusion>
        <exclusion>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
        </exclusion>
        <exclusion>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
        </exclusion>
    </exclusions>
        </dependency>

    <dependency><groupId>org.eclipse.jdt</groupId><artifactId>org.eclipse.jdt.core</artifactId><version>3.39.0</version></dependency><dependency><groupId>org.fxmisc.richtext</groupId><artifactId>richtextfx</artifactId><version>0.11.2</version></dependency></dependencies>

    <build>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>

                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>

            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>

                <configuration>
                    <mainClass>com.projectwizard.Main</mainClass>
                <options><option>--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option><option>-Xmx3g</option><option>-XX:+UseG1GC</option></options></configuration>

            </plugin>

        </plugins>

    </build>

</project>